--- a/index.html
+++ b/index.html
@@ -2,15 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- See getting started with bootstrap 2:09-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Importing Bootstrap if it is saved in files-->
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- Custom CSS file import-->
+    <link rel="stylesheet" href="css/custom-styles.css">
+    <!-- Importing Bootstrap if you want to link directly to Bootstrap CDN (prefered)-->
+    <!--
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    -->
+    <!-- Importing Font Awesome and Bootstrap Social CSS classes -->
+    <link href="css/font-awesome/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap/bootstrap-social.css" rel="stylesheet">
+
+    <!-- Importing Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kavoon" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <title>Pacifico</title>
+    <!-- Importing Angular.js-->
+    <script src='js/angular/angular.min.js'></script>
+    <script src='js/app.js'></script>
+
+    <title>Innovation Starts Here: William Barela</title>
   </head>
   <body>
     <h1></h1>
     <div>
       This is an example of a great textbox
     </div>
+
+    <!-- Inclusion of jQuery library if saved in webpage folder-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
+    <!-- Inclusion of jQuery if linked directly to the bootstrap CDN -->
+    <!--
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
   </body>
 </html>
