--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" type="image/svg" href="img/logo-wb-cmyk.svg"/>
     <!-- Importing Bootstrap if it is saved in files-->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <!--
@@ -23,8 +24,7 @@
     <link href="css/lavish-bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom-styles.css">
     <!-- Importing Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kavoon" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Ek+Mukta|Open+Sans|Special+Elite" rel="stylesheet">
     <!-- Importing Angular.js-->
     <script src='js/angular/angular.min.js'></script>
     <script src='js/app.js'></script>
@@ -42,7 +42,7 @@
               <span class='icon-bar'></span>
               <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' href='index.html'><img src='img/tardigrade.png' height=25 width=25 /></a>
+            <a class='navbar-brand' href='index.html'><img src='img/logo-wb-cmyk.svg' height=25 width=25 /></a>
           </div>
 
           <!--Navbar list-->
@@ -54,28 +54,31 @@
                   <span class='glyphicon glyphicon-home' aria-hidden='true'></span> Home
                 </a>
               </li>
-              <!--About Us button-->
+              <!--About button-->
               <li>
-                <a href='aboutus.html'>
+                <a href='about.html'>
                   <span class='glyphicon glyphicon-info-sign' aria-hidden='true'></span> About
                 </a>
               </li>
               <!--Menu button with dropdown menu-->
               <li class='dropdown'>
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>
-                  Menu <span class='caret'></span>
+                  Resources <span class='caret'></span>
                 </a>
                 <!--Dropdown Menu Contents-->
                 <ul class='dropdown-menu'>
-                  <li class='dropdown-header'>Main Event</li>
-                  <li><a href="#">Appetizers</a></li>
-                  <li><a href="#">Main Courses</a></li>
-                  <li><a href="#">Desserts</a></li>
-                  <li><a href="#">Drinks</a></li>
+                  <li class='dropdown-header'>Professional</li>
+                  <li><a href="#">Full Stack Web Development</a></li>
+                  <li><a href="#">Programming</a></li>
+                  <li><a href="#">Design</a></li>
                   <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Specials</li>
-                  <li><a href="#">Lunch Buffet</a></li>
-                  <li><a href="#">Weekend Brunch</a></li>
+                  <li class='dropdown-header'>Hobbies</li>
+                  <li><a href="#">Photography</a></li>
+                  <li><a href="#">Linguistics</a></li>
+                  <li><a href="#">Physics</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Documents</li>
+                  <li><a href="#">Resume</a></li>
                 </ul>
               </li>
               <!--Contact Button-->
@@ -89,6 +92,19 @@
         </div>
       </nav>
 
+      <div class="container">
+        <div class="row row-content">
+          <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
+            <p class='visible-xs visible-sm' style='padding:20px;'></p>
+            <p class='visible-md visible-lg' style='padding:110px;'></p>
+            <h1>William Barela</h1>
+            <div class="well">
+              <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
+              <p>We hold the keys and we make ourselves and life what we want it to be.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
