--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
       <div class="container">
         <div class="row row-content">
           <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
-            <p class='visible-xs visible-sm' style='padding:40px;'></p>
+            <p class='visible-xs' style='padding:40px;'></p>
+            <p class='visible-sm' style='padding:20px;'></p>
             <p class='visible-md visible-lg' style='padding:110px;'></p>
             <h1>William Barela</h1>
             <div class="well">
