--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
             <p class='visible-xs visible-sm' style='padding:50px;'></p>
             <p class='visible-md visible-lg' style='padding:110px;'></p>
-            <h1>William Barela</h1>
+            <p class='name-banner'>William Barela</p>
             <div class="well">
               <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
               <p>We hold the keys and we make ourselves and life what we want it to be.</p>
