--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='lister'>
   <head>
     <meta charset="utf-8">
     <!-- See getting started with bootstrap 2:09-->
@@ -23,6 +23,7 @@
     <!-- Custom CSS file import-->
     <link href="css/lavish-bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom-styles.css">
+    <link rel="stylesheet" href="css/custom-styles-index.css">
     <!-- Importing Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ek+Mukta|Open+Sans|Special+Elite" rel="stylesheet">
     <!-- Importing Angular.js-->
@@ -30,6 +31,8 @@
     <script src='js/app.js'></script>
     <title>Innovation Starts Here: William Barela</title>
   </head>
+
+
   <body>
     <!-- Navigation Bar-->
       <nav class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
@@ -91,7 +94,7 @@
         </div>
       </nav>
 
-      <div class="container">
+      <div class="container" ng-controller='menuServer'>
         <div class="row row-content">
           <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
             <p class='visible-xs visible-sm' style='padding:50px;'></p>
@@ -101,9 +104,16 @@
               <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
               <p>We hold the keys and we make ourselves and life what we want it to be.</p>
             </div>
+            <button type="button" ng-click='makeList()'>Menu Serving</button>
+            <!--
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
+            </div>
+            -->
           </div>
         </div>
       </div>
+
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
