--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/svg" href="img/logo-wb-cmyk.svg"/>
+    <link rel="icon" type="image/png" href="img/logo-wb-cmyk.png"/>
     <!-- Importing Bootstrap if it is saved in files-->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <!--
