updated context menu

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <!-- Importing Angular.js-->
     <script src='js/angular/angular.min.js'></script>
     <script src='js/app.js'></script>
-    <title>William Barela: Physics</title>
+    <title>William Barela: Contact</title>
   </head>
 
 
@@ -63,39 +63,20 @@
                 </a>
               </li>
               <!--Menu button with dropdown menu-->
-              <li class='dropdown active'>
+              <li class='dropdown'>
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>
                   <span class='glyphicon glyphicon-list'></span> Resources <span class='caret'></span>
                 </a>
-                
                 <!--Dropdown Menu Contents-->
-                <!--FIXME Expand the resources dropdown with this list-->
-                <!--
                 <ul class='dropdown-menu'>
                   <li class='dropdown-header'>Professional</li>
-                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
-                  <li><a href="programming.html">Programming</a></li>
-                  <li><a href="design.html">Design</a></li>
+                  <li><a href="#">Full Stack Web Development</a></li>
+                  <li><a href="#">Programming</a></li>
+                  <li><a href="#">Design</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="photography.html">Photography</a></li>
-                  <li><a href="linguistics.html">Linguistics</a></li>
-                  <li><a href="physics.html">Physics</a></li>
-                  <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Documents</li>
-                  <li><a href="#">Resume</a></li>
-                </ul>
-                -->
-
-                <ul class='dropdown-menu'>
-                  <li class='dropdown-header'>Professional</li>
-                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
-                  <li><a href="programming.html">Programming</a></li>
-                  <li><a href="design.html">Design</a></li>
-                  <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="photography.html">Photography</a></li>
-                  <li><a href="linguistics.html">Linguistics</a></li>
+                  <li><a href="#">Photography</a></li>
+                  <li><a href="#">Linguistics</a></li>
                   <li><a href="physics.html">Physics</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Documents</li>
@@ -103,7 +84,7 @@
                 </ul>
               </li>
               <!--Contact Button-->
-              <li>
+              <li class='active'>
                 <a href='contact.html'>
                   <span><i class='fa fa-envelope'> </i></span> Contact
                 </a>
