--- a/index.html
+++ b/index.html
@@ -65,19 +65,38 @@
               <!--Menu button with dropdown menu-->
               <li class='dropdown'>
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>
-                  Resources <span class='caret'></span>
+                  <span class='glyphicon glyphicon-list'></span> Resources <span class='caret'></span>
                 </a>
+
                 <!--Dropdown Menu Contents-->
+                <!--FIXME Expand the resources dropdown with this list-->
+                <!--
                 <ul class='dropdown-menu'>
                   <li class='dropdown-header'>Professional</li>
-                  <li><a href="#">Full Stack Web Development</a></li>
-                  <li><a href="#">Programming</a></li>
-                  <li><a href="#">Design</a></li>
+                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <li><a href="design.html">Design</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="#">Photography</a></li>
-                  <li><a href="#">Linguistics</a></li>
-                  <li><a href="#">Physics</a></li>
+                  <li><a href="photography.html">Photography</a></li>
+                  <li><a href="linguistics.html">Linguistics</a></li>
+                  <li><a href="physics.html">Physics</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Documents</li>
+                  <li><a href="#">Resume</a></li>
+                </ul>
+                -->
+
+                <ul class='dropdown-menu'>
+                  <li class='dropdown-header'>Professional</li>
+                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <li><a href="design.html">Design</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Hobbies</li>
+                  <li><a href="photography.html">Photography</a></li>
+                  <li><a href="linguistics.html">Linguistics</a></li>
+                  <li><a href="physics.html">Physics</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Documents</li>
                   <li><a href="#">Resume</a></li>
@@ -85,7 +104,7 @@
               </li>
               <!--Contact Button-->
               <li>
-                <a href='contactus.html'>
+                <a href='contact.html'>
                   <span><i class='fa fa-envelope'> </i></span> Contact
                 </a>
               </li>
