--- a/misc/video-example.html
+++ b/misc/video-example.html
@@ -23,17 +23,17 @@
     <!-- Custom CSS file import-->
     <link href="css/lavish-bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom-styles.css">
+    <link rel="stylesheet" href="css/custom-styles-index.css">
     <!-- Importing Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ek+Mukta|Open+Sans|Special+Elite" rel="stylesheet">
     <!-- Importing Angular.js-->
     <script src='js/angular/angular.min.js'></script>
     <script src='js/app.js'></script>
-    <title>William Barela: About</title>
+    <title>Innovation Starts Here: William Barela</title>
   </head>
 
 
   <body>
-
     <!-- Navigation Bar-->
       <nav class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
         <div class='container'>
@@ -51,13 +51,13 @@
           <div id=navbar class="navbar-collapse collapse">
             <ul class='nav navbar-nav'>
               <!--Home Button-->
-              <li>
+              <li class='active'>
                 <a href='index.html'>
                   <span class='glyphicon glyphicon-home' aria-hidden='true'></span> Home
                 </a>
               </li>
               <!--About button-->
-              <li class='active'>
+              <li>
                 <a href='about.html'>
                   <span class='glyphicon glyphicon-info-sign' aria-hidden='true'></span> About
                 </a>
@@ -67,16 +67,35 @@
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>
                   <span class='glyphicon glyphicon-list'></span> Resources <span class='caret'></span>
                 </a>
+
                 <!--Dropdown Menu Contents-->
+                <!--FIXME Expand the resources dropdown with this list-->
+                <!--
                 <ul class='dropdown-menu'>
                   <li class='dropdown-header'>Professional</li>
-                  <li><a href="#">Full Stack Web Development</a></li>
-                  <li><a href="#">Programming</a></li>
-                  <li><a href="#">Design</a></li>
+                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <li><a href="design.html">Design</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="#">Photography</a></li>
-                  <li><a href="#">Linguistics</a></li>
+                  <li><a href="photography.html">Photography</a></li>
+                  <li><a href="linguistics.html">Linguistics</a></li>
+                  <li><a href="physics.html">Physics</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Documents</li>
+                  <li><a href="#">Resume</a></li>
+                </ul>
+                -->
+
+                <ul class='dropdown-menu'>
+                  <li class='dropdown-header'>Professional</li>
+                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <li><a href="design.html">Design</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Hobbies</li>
+                  <li><a href="photography.html">Photography</a></li>
+                  <li><a href="linguistics.html">Linguistics</a></li>
                   <li><a href="physics.html">Physics</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Documents</li>
@@ -97,11 +116,19 @@
       <div class="container" ng-controller='menuServer'>
         <div class="row row-content">
           <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
-
+            <p class='visible-xs visible-sm' style='padding:50px;'></p>
+            <p class='visible-md visible-lg' style='padding:110px;'></p>
+            <p class='name-banner'>William Barela</p>
+            <div class="well">
+              <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
+              <p>We hold the keys and we make ourselves and life what we want it to be.</p>
+            </div>
             <button type="button" ng-click='makeList()'>Menu Serving</button>
-
-
-
+            <div style="width: 1920px; height: 1080px; background-image: url(&quot;/overseas/desktop/dist/assets/images/tour/poster_marocco.jpg&quot;); transform-origin: 0px 0px 0px; transform: matrix(0.713889, 0, 0, 0.713889, -411.833, 0);">
+              <video data-setup="{ &quot;aspectRatio&quot;:&quot;640:267&quot;, &quot;playbackRates&quot;: [2] }"
+              loop="" autoplay="" poster="/overseas/desktop/dist/assets/images/tour/poster_marocco.jpg" width="1920"
+              height="1080" src="morocco.mp4"></video>
+            </div>
             <!--
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
