--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='lister'>
+<html>
   <head>
     <meta charset="utf-8">
     <!-- See getting started with bootstrap 2:09-->
@@ -94,20 +94,28 @@
         </div>
       </nav>
 
-      <div class="container" ng-controller='menuServer'>
-        <div class="row row-content">
-          <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
+      <div class="row row-content">
+        <div class="col-xs-12">
+          <p style="padding:20px"></p>
+          <img src="img/nm-1920-320.jpg" alt="New Mexico" width="100%" height="auto">
+        </div>
+      </div>
 
-            <button type="button" ng-click='makeList()'>Menu Serving</button>
-
-
-
-            <!--
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
-            </div>
-            -->
+      <div class="row row-content">
+        <div class="col-xs-12 banner">
+          <div>
+            "This is New Mexico"
           </div>
+          <div>
+            "This is where I am from"
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content">
+        <div class="col-xs-12">
+          <p style="padding:20px"></p>
+          <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto">
         </div>
       </div>
 
