--- a/about.html
+++ b/about.html
@@ -113,9 +113,21 @@
       </div>
 
       <div class="row row-content">
-        <div class="col-xs-12">
+        <div class="col-sm-5">
+          <div class="row row-content">
+            <div class="col-6 col-xs-12">
+              <p style="padding:20px"></p>
+              <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto">
+            </div>
+            <div class="col-6 col-xs-12">
+              <p style="padding:20px"></p>
+              <img src="img/organs-1920-960-2.jpg" alt="New Mexico" width="100%" height="auto">
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-7">
           <p style="padding:20px"></p>
-          <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto">
+          <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="100%" height="auto">
         </div>
       </div>
 
