updated css overlay transition

--- a/about.html
+++ b/about.html
@@ -116,18 +116,39 @@
         <div class="col-sm-5">
           <div class="row row-content">
             <div class="col-6 col-xs-12">
-              <p style="padding:20px"></p>
-              <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto">
+              <div class="mycontainer">
+                <p style="padding:20px"></p>
+                <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto" class="image">
+                <div class="overlay">
+                  <div class="text">
+                    "Out on the Road"
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-6 col-xs-12">
-              <p style="padding:20px"></p>
-              <img src="img/organs-1920-960-2.jpg" alt="New Mexico" width="100%" height="auto">
+              <div class=" mycontainer">
+                <p style="padding:20px"></p>
+                <img src="img/organs-1920-960-2.jpg" alt="New Mexico" width="100%" height="auto" class="image">
+                <div class="overlay">
+                  <div class="text">
+                    "Organ Mountains of Las Cruces"
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-7">
-          <p style="padding:20px"></p>
-          <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="100%" height="auto">
+          <div class=" mycontainer">
+            <p style="padding:20px"></p>
+            <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="100%" height="auto" class="image">
+            <div class="overlay">
+              <div class="text">
+                "Me in White Sands National Monmument"
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
