--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
               <p>We hold the keys and we make ourselves and life what we want it to be.</p>
             </div>
-            <button type="button" ng-click='makeList()'>Menu Serving</button>
+            <button type="button" class="btn-default btn-lg" ng-click='makeList()'>Menu Serving</button>
             <!--
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
