--- a/about.html
+++ b/about.html
@@ -94,9 +94,13 @@
         </div>
       </nav>
 
+
+<div class="container">
+
+
       <div class="row row-content">
         <div class="col-xs-12">
-          <p style="padding:20px"></p>
+          <p style="padding:10px"></p>
           <img src="img/nm-1920-320.jpg" alt="New Mexico" width="100%" height="auto">
         </div>
       </div>
@@ -116,8 +120,8 @@
         <div class="col-sm-5">
           <div class="row row-content">
             <div class="col-6 col-xs-12">
-              <div class="mycontainer">
-                <p style="padding:20px"></p>
+              <div class="img-container">
+                <p style="padding:10px"></p>
                 <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto" class="image">
                 <div class="overlay">
                   <div class="text">
@@ -127,8 +131,8 @@
               </div>
             </div>
             <div class="col-6 col-xs-12">
-              <div class=" mycontainer">
-                <p style="padding:20px"></p>
+              <div class=" img-container">
+                <p style="padding:10px"></p>
                 <img src="img/organs-1920-960-2.jpg" alt="New Mexico" width="100%" height="auto" class="image">
                 <div class="overlay">
                   <div class="text">
@@ -140,9 +144,9 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-7">
-          <div class=" mycontainer">
-            <p style="padding:20px"></p>
-            <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="100%" height="auto" class="image">
+          <div class=" img-container">
+            <p style="padding:10px"></p>
+            <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="auto" height="100%" class="image">
             <div class="overlay">
               <div class="text">
                 "Me in White Sands National Monmument"
@@ -151,10 +155,52 @@
           </div>
         </div>
       </div>
+</div>
 
+<footer class="row-footer" id='my-footer'>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-xs-6 col-xs-offset-1 col-sm-2 col-sm-offset-1'>
+                <h5>Links</h5>
+                <ul class='list-unstyled'>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="aboutus.html">About</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class='col-xs-6 col-sm-5'>
+                <h5>Our Address</h5>
+                <address>
+              121, Clear Water Bay Road<br>
+              Clear Water Bay, Kowloon<br>
+              HONG KONG<br>
+              <i class='fa fa-phone'></i>: +85 2 1234 5678<br>
+              <i class='fa fa-fax'></i>: +85 2 8765 4321<br>
+              <i class='fa fa-envelope'></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+           </address>
+            </div>
+            <div class='col-xs-12 col-sm-4'>
+                <div class='nav navbar-nav' style="padding: 40px 10px;">
+                    <a class='btn btn-social-icon btn-google-plus' href="http://google.com/+"><i class='fa fa-google-plus'></i></a>
+                    <a class='btn btn-social-icon btn-facebook' href="http://www.facebook.com/profile.php?id="><i class='fa fa-facebook'></i></a>
+                    <a class='btn btn-social-icon btn-linkedin' href="http://www.linkedin.com/in/"><i class='fa fa-linkedin'></i></a>
+                    <a class='btn btn-social-icon btn-twitter' href="http://twitter.com/"><i class='fa fa-twitter'></i></a>
+                    <a class='btn btn-social-icon btn-youtube' href="http://youtube.com/"><i class='fa fa-youtube'></i></a>
+                    <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a>
+                </div>
+            </div>
+            <div class='col-xs-12'>
+                <p style="padding:10px;"></p>
+                <p align=center>© Copyright 2015 Ristorante Con Fusion</p>
+            </div>
+        </div>
+    </div>
+</footer>
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
+
     <!-- Inclusion of jQuery if linked directly to the bootstrap CDN -->
     <!--
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
