--- a/about.html
+++ b/about.html
@@ -94,16 +94,19 @@
         </div>
       </nav>
 
+<div class="parallax"></div>
 
 <div class="container">
 
-
+    <!--
       <div class="row row-content">
         <div class="col-xs-12">
           <p style="padding:10px"></p>
           <img src="img/nm-1920-320.jpg" alt="New Mexico" width="100%" height="auto">
         </div>
       </div>
+
+    -->
 
       <div class="row row-content">
         <div class="col-xs-12 banner">
@@ -155,6 +158,7 @@
           </div>
         </div>
       </div>
+      <p style='padding:20px'></p>
 </div>
 
 <footer class="row-footer" id='my-footer'>
@@ -169,18 +173,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-            <div class='col-xs-6 col-sm-5'>
-                <h5>Our Address</h5>
-                <address>
-              121, Clear Water Bay Road<br>
-              Clear Water Bay, Kowloon<br>
-              HONG KONG<br>
-              <i class='fa fa-phone'></i>: +85 2 1234 5678<br>
-              <i class='fa fa-fax'></i>: +85 2 8765 4321<br>
-              <i class='fa fa-envelope'></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
-           </address>
-            </div>
-            <div class='col-xs-12 col-sm-4'>
+
+            <div class='col-xs-12 col-xs-offset-1 col-sm-4 col-sm-push-5'>
                 <div class='nav navbar-nav' style="padding: 40px 10px;">
                     <a class='btn btn-social-icon btn-google-plus' href="http://google.com/+"><i class='fa fa-google-plus'></i></a>
                     <a class='btn btn-social-icon btn-facebook' href="http://www.facebook.com/profile.php?id="><i class='fa fa-facebook'></i></a>
@@ -192,7 +186,7 @@
             </div>
             <div class='col-xs-12'>
                 <p style="padding:10px;"></p>
-                <p align=center>© Copyright 2015 Ristorante Con Fusion</p>
+                <p align=center>Handcrafted with <span style='color:red;'>love</span> on our beloved blue marble. 2017</p>
             </div>
         </div>
     </div>
