--- a/physics.html
+++ b/physics.html
@@ -119,6 +119,10 @@
       <div class="container" ng-controller='dropdownController'>
         <div class="row row-content">
           <div class="col-xs-11 col-xs-offset-1 col-sm-10 col-sm-offset-2 col-md-8 col-md-offset-3">
+            <h1>Physics Properties Calculator</h1>
+            <p>Select one of the properties from the dropdown below to calculate the property.</p>
+            <p>An example will be auto-populated and and explanation will be provided.</p>
+
             <form>
 
               <!-- defining dropdown menu-->
