Updated angular.js controller to include computational functionality

--- a/physics.html
+++ b/physics.html
@@ -154,11 +154,20 @@
                 </div>
               </div>
 
+              <div class="form-group">
+                <div class="row row-content">
+                  <div class="col-xs-8">
+                      <input type="text" class="form-control" placeholder={{calcOutput}}>
+                  </div>
+                </div>
+
+              </div>
+
               <!-- defining calculate button-->
               <div class="form-group">
                 <div class="row row-content">
                     <div class="col-xs-4 col-xs-offset-3">
-                      <button class="btn btn-primary" type="button" name="button" ng-click='makeList()'>Calculate!</button> <!--FIXME: make the angular model for this and connect it-->
+                      <button class="btn btn-primary" type="button" name="button" ng-click='calculate()'>Calculate!</button> <!--FIXME: make the angular model for this and connect it-->
                     </div>
                 </div>
               </div>
