--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='lister'>
+<html>
   <head>
     <meta charset="utf-8">
     <!-- See getting started with bootstrap 2:09-->
@@ -113,7 +113,7 @@
         </div>
       </nav>
 
-      <div class="container" ng-controller='menuServer'>
+      <div class="container">
         <div class="row row-content">
           <div class="col-xs-10 col-xs-push-1 col-md-6 col-md-push-6">
             <p class='visible-xs visible-sm' style='padding:50px;'></p>
@@ -123,7 +123,6 @@
               <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
               <p>We hold the keys and we make ourselves and life what we want it to be.</p>
             </div>
-            <button type="button" class="btn-default btn-lg" ng-click='makeList()'>Menu Serving</button>
             <!--
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
