--- a/physics.html
+++ b/physics.html
@@ -187,7 +187,7 @@
                       <ul class='list-unstyled'>
                           <li><a href="index.html">Home</a></li>
                           <li><a href="aboutus.html">About</a></li>
-                          <li><a href="#">Menu</a></li>
+                          <li><a href="physics.html">Angularjs App</a></li>
                           <li><a href="#">Contact</a></li>
                       </ul>
                   </div>
