--- a/physics.html
+++ b/physics.html
@@ -26,7 +26,7 @@
     <!-- Importing Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ek+Mukta|Open+Sans|Special+Elite" rel="stylesheet">
     <!-- Importing Angular.js-->
-    <script src='js/angular/angular.min.js'></script>
+    <script src='js/angular/angular.js'></script>
     <script src='js/app.js'></script>
     <title>William Barela: Physics</title>
   </head>
@@ -119,9 +119,22 @@
       <div class="container" ng-controller='dropdownController'>
         <div class="row row-content">
           <div class="col-xs-11 col-xs-offset-1 col-sm-10 col-sm-offset-2 col-md-8 col-md-offset-3">
+
             <h1>Physics Properties Calculator</h1>
-            <p>Select one of the properties from the dropdown below to calculate the property.</p>
-            <p>An example will be auto-populated and and explanation will be provided.</p>
+
+            <div ng-show="appBool.initMessage">
+              <p>Select one of the properties from the dropdown below to calculate the property.</p>
+              <p>An example will be auto-populated and and explanation will be provided.</p>
+            </div>
+
+            <!-- FIXME: make this logic simpler if you can-->
+            <div ng-show="appBool.tryCalcAgain" && "!appBool.afterCalcMessage">
+              <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
+            </div>
+
+            <div ng-show="appBool.afterCalcMessage">
+              <p>Try another combination or select another property to calculate.</p>
+            </div>
 
             <form>
 
@@ -154,7 +167,7 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" ng-show="appBool.afterCalcMessage">
                 <div class="row row-content">
                   <div class="col-xs-8">
                       <input type="text" class="form-control" placeholder={{calcOutput}}>
