testing to correct for error in iOS

--- a/physics.html
+++ b/physics.html
@@ -128,7 +128,7 @@
             </div>
 
             <!-- FIXME: make this logic simpler if you can-->
-            <div ng-show="appBool.tryCalcAgain" && "!appBool.afterCalcMessage">
+            <div ng-show="appBool.tryCalcAgain"> <!-- && "!appBool.afterCalcMessage"> -->
               <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
             </div>
 
