--- a/physics-reset.html
+++ b/physics-reset.html
@@ -119,9 +119,22 @@
       <div class="container" ng-controller='dropdownController'>
         <div class="row row-content">
           <div class="col-xs-11 col-xs-offset-1 col-sm-10 col-sm-offset-2 col-md-8 col-md-offset-3">
+
             <h1>Physics Properties Calculator</h1>
-            <p>Select one of the properties from the dropdown below to calculate the property.</p>
-            <p>An example will be auto-populated and and explanation will be provided.</p>
+
+            <div ng-if="appBool.initMessage">
+              <p>Select one of the properties from the dropdown below to calculate the property.</p>
+              <p>An example will be auto-populated and and explanation will be provided.</p>
+            </div>
+
+            <!-- FIXME: make this logic simpler if you can-->
+            <div ng-if="appBool.tryCalcAgain"> <!-- && "!appBool.afterCalcMessage"> -->
+              <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
+            </div>
+
+            <div ng-if="appBool.afterCalcMessage">
+              <p>Try another combination or select another property to calculate.</p>
+            </div>
 
             <form>
 
@@ -154,7 +167,7 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" ng-if="appBool.afterCalcMessage">
                 <div class="row row-content">
                   <div class="col-xs-8">
                       <input type="text" class="form-control" placeholder={{calcOutput}}>
