--- a/misc/mobile-error-safe/physics.html
+++ b/misc/mobile-error-safe/physics.html
@@ -122,18 +122,9 @@
 
             <h1>Physics Properties Calculator</h1>
 
-            <div ng-if="appBool.initMessage">
+            <div ng-show="appBool.initMessage">
               <p>Select one of the properties from the dropdown below to calculate the property.</p>
               <p>An example will be auto-populated and and explanation will be provided.</p>
-            </div>
-
-            <!-- FIXME: make this logic simpler if you can-->
-            <div ng-if="appBool.tryCalcAgain"> <!-- && "!appBool.afterCalcMessage"> -->
-              <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
-            </div>
-
-            <div ng-if="appBool.afterCalcMessage">
-              <p>Try another combination or select another property to calculate.</p>
             </div>
 
             <form>
@@ -167,7 +158,7 @@
                 </div>
               </div>
 
-              <div class="form-group" ng-if="appBool.afterCalcMessage">
+              <div class="form-group">
                 <div class="row row-content">
                   <div class="col-xs-8">
                       <input type="text" class="form-control" placeholder={{calcOutput}}>
