--- a/physics.html
+++ b/physics.html
@@ -170,7 +170,10 @@
               <div class="form-group" ng-show="appBool.afterCalcMessage">
                 <div class="row row-content">
                   <div class="col-xs-8">
-                      <input type="text" class="form-control" placeholder={{calcOutput}}>
+                      <div class="alert alert-success" role="alert">
+                        <h4>The answer is...</h4>
+                        <p>{{calcOutput}}</p>
+                      </div>
                   </div>
                 </div>
 
