updated physics object to avoid boilerplate code

--- a/physics.html
+++ b/physics.html
@@ -172,7 +172,7 @@
                   <div class="col-xs-8">
                       <div class="alert alert-success" role="alert">
                         <h4>The answer is...</h4>
-                        <p>{{calcOutput}}</p>
+                        <p>{{calcOutput}} {{calcOutputUnits}}</p>
                       </div>
                   </div>
                 </div>
