--- a/physics.html
+++ b/physics.html
@@ -172,7 +172,7 @@
                   <div class="col-xs-8">
                       <div class="alert alert-success" role="alert">
                         <h4>The answer is...</h4>
-                        <p>{{calcOutput}} {{calcOutputUnits}}</p>
+                        <p>{{calcOutput}} <span ng-if="!appBool.errorMessage">{{calcOutputUnits}}</span></p>
                       </div>
                   </div>
                 </div>
@@ -186,6 +186,17 @@
                       <!-- <input type="reset" value="Reset"> -->
                       <button class="btn btn-primary" type="button" name="button" ng-click='calculate()'>Calculate!</button> <!--FIXME: make the angular model for this and connect it-->
                     </div>
+                </div>
+              </div>
+
+              <div class="form-group" ng-show="appBool.afterCalcMessage">
+                <div class="row row-content">
+                  <div class="col-xs-8">
+                      <div class="alert alert-info" role="alert">
+                        <h4>Analysis:</h4>
+                        <p ng-if="!appBool.errorMessage">{{analysisMessage}}</p>
+                      </div>
+                  </div>
                 </div>
               </div>
 
